--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/HonorableAnomaly/CompassCamp.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ricky Argenbright",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/HonorableAnomaly/CompassCamp/issues"
