--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/HonorableAnomaly/CompassCamp#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.0.2",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.3",
