--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/HonorableAnomaly/CompassCamp#readme",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.0",
     "ejs": "^3.0.2",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.3",
